--- a/LibraryCatalog/LibraryCatalog.Data/LibraryCatalog.Data.csproj
+++ b/LibraryCatalog/LibraryCatalog.Data/LibraryCatalog.Data.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\LibraryCatalog.Data\LibraryCatalog.Data.csproj" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.9" />
     </ItemGroup>
 
 </Project>
