--- a/LibraryCatalog/LibraryCatalog/LibraryCatalog.csproj
+++ b/LibraryCatalog/LibraryCatalog/LibraryCatalog.csproj
@@ -8,4 +8,9 @@
       <ProjectReference Include="..\LibraryCatalog.Data\LibraryCatalog.Data.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="10.1.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+    </ItemGroup>
+
 </Project>
