--- a/LibraryCatalog/LibraryCatalog.Tests/LibraryCatalog.Tests.csproj
+++ b/LibraryCatalog/LibraryCatalog.Tests/LibraryCatalog.Tests.csproj
@@ -7,9 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="NUnit" Version="3.12.0"/>
-        <PackageReference Include="NUnit3TestAdapter" Version="3.16.1"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.10" />
+        <PackageReference Include="Moq" Version="4.15.2" />
+        <PackageReference Include="NUnit" Version="3.12.0" />
+        <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\LibraryCatalog\LibraryCatalog.csproj" />
     </ItemGroup>
 
 </Project>
